# vartorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: mnist.yaml  moons.yaml
examples/: var_halfmoons.ipynb  var_mnist.ipynb  variational_halfmoons.ipynb  variational_mnist.ipynb
notebooks/: halfmoons.ipynb  mnist.ipynb  moons.ipynb  var_halfmoons.ipynb  var_mnist.ipynb
scripts/: main.py
src/vartorch/: __init__.py  kldiv.py  metrics.py  reparam.py
src/vartorch/data/: __init__.py  mnist.py  moons.py
src/vartorch/layers/: __init__.py  base.py  linear.py  reparam.py  utils.py
src/vartorch/model/: __init__.py  conv.py  dense.py
src/vartorch/var/: __init__.py  base.py  conv.py  dense.py
src/vartorch/vis/: __init__.py  mnist.py  moons.py
vartorch/: __init__.py  analysis.py  confidence.py  divergence.py  divergences.py  kldiv.py  layers.py  metrics.py  outtakes.py  reparam.py  reparametrization.py  variational.py  variationalize.py  vis.py
vartorch/data/: __init__.py  mnist.py  moons.py
vartorch/layers/: __init__.py  base.py  linear.py  reparam.py  utils.py
vartorch/model/: __init__.py  base.py  conv.py  dense.py
vartorch/var/: __init__.py  base.py  conv.py  dense.py
vartorch/vis/: __init__.py  mnist.py  moons.py
