[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vartorch"
version = "0.0.1"
description = "Variational inference for Bayesian neural nets with PyTorch"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Nagel", email = "JosephBNagel@gmail.com"}
]
keywords = ["variational inference", "Bayesian neural network"]
dependencies = [
    "numpy",
    "torch",
    "lightning",
    "tensorboard",
    "mlflow",
    "omegaconf",
    "matplotlib",
    "notebook"
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[project.urls]
source = "https://github.com/joseph-nagel/vartorch"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["E501"]  # include line-length violations that would be ignored otherwise (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # do not collapse multi-line collections with a trailing comma into a single line
